--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ name = "rvop"
 [dependencies]
 anyhow = "1.0.58"
 chumsky = "0.8.0"
+const_format = "0.2.26"
+git2 = "0.14.4"
+globset = "0.4.9"
 num-traits = "0.2.15"
+spdlog-rs = "0.2.4"
+tempfile = "3.3.0"
+walkdir = "2.3.2"
 
 [features]
