--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "rvop"
 [dependencies]
 anyhow = "1.0.58"
 chumsky = "0.8.0"
+clap = { version = "3.2.16", features = ["derive"] }
 const_format = "0.2.26"
 git2 = "0.14.4"
 globset = "0.4.9"
